# jax_privacy

./: .flake8  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  conftest.py  lint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.sh
.github/workflows/: assign-pr.yml  ci.yml  examples.yml  stale.yml  welcome.yml
bibtex/: berrada2023unlocking.bib  de2022unlocking.bib
docs/: Makefile  conf.py  contribution_guide.rst  core_library.rst  examples_guide.md  index.rst  installation.md  introduction.md  keras_api.rst  library_design.md  make.bat  overview.md  paper_reproductions.md  requirements.txt  sharp_edges.md  sharp_edges_dp_training_pitfalls.md  sharp_edges_mixed_precision.md  sharp_edges_variable_batch_sizes.md  sharp_edges_vmap_sharding.md  support.md  troubleshooting.md
docs/source/: conf.py  contribution_guide.rst  core_library.rst  flax_linen_example.rst  gemma_dp_finetuning_example.rst  index.rst  introduction.md  jax_api.rst  keras_api.rst  overview.md  paper_reproductions.md  requirements.txt
examples/: adaptive_private_optimizer_example.py  balls_in_bins_accounting.py  data_loading.py  distributed_noise_generation.py  dp2_delayed_preconditioner_example.py  dp_logistic_regression.py  dp_sgd_flax_linen_mnist.ipynb  dp_sgd_keras_gemma3_dpsapf.ipynb  dp_sgd_keras_gemma3_lora_finetuning_samsum.ipynb  dp_sgd_keras_gemma3_synthetic_data.ipynb  dp_sgd_transformer.py  dp_sgd_transformer_example.py  dp_sgd_transformer_nnx.py  dp_training_crypto_secure.py  dp_transformer_auditing.py  dpftrl_strategy_optimization.py  dpmf_strategy_optimization.py  dpsapf_utils.py  jax_api_example.py  jax_new_api_example.py  keras_api_example.py  multi_user_attribution_example.py  secure_noise_example.py  user_level_transformer_example.py
experiments/image_classification/: README.md  auditing.py  config_base.py  evaluator.py  experiment.py  experiment_test.py  forward.py  metrics.py  run_experiment.py  run_experiment_jaxline.py  run_experiment_loop.py
experiments/image_data/: __init__.py  augmult.py  base.py  chexpert.py  dataset_test.py  decoder.py  imagenet.py  loader.py  mimic_cxr.py  mnist_cifar_svhn.py  places365.py
experiments/training/: algorithm_config.py  algorithm_config_test.py  auto_tune.py  auto_tune_test.py  batching.py  dp_updater.py  dp_updater_test.py  evaluator.py  evaluator_test.py  experiment.py  experiment_config.py  jaxline.py  metrics.py  metrics_test.py  optimizer_config.py  updater.py
jax_privacy/: __init__.py  _multi_owner.py  _validate.py  accounting.py  auditing.py  auditing_test.py  batch_selection.py  batch_selection_test.py  clipping.py  clipping_test.py  execution_plan.py  keras_api.py  keras_api_test.py  noise_addition.py  noise_addition_test.py  optimizers.py  sharding_utils.py  sharding_utils_test.py  training.py
jax_privacy/_deprecated/: __init__.py
jax_privacy/accounting/: __init__.py  accountants.py  analysis.py  analysis_test.py  calibrate.py  calibrate_test.py
jax_privacy/auditing/: auditing_utils.pyx  auditing_utils_test.py  canary_score_auditor.py  canary_score_auditor_test.py
jax_privacy/dp_sgd/: grad_clipping.py  grad_clipping_sharded_test.py  grad_clipping_test.py  grad_clipping_utils.py  gradients.py  gradients_test.py  metrics_accumulator.py  optim.py  optim_test.py  typing.py  wrapped_privatizer.py
jax_privacy/dpftrl_mechanisms/: README.md  banded.py  banded_test.py  buffered_toeplitz.py  buffered_toeplitz_test.py  checks.py  checks_test.py  contrib_matrix_builders.py  contrib_matrix_builders_test.py  dense.py  dense_test.py  optimization.py  optimization_test.py  sensitivity.py  sensitivity_test.py  streaming_matrix.py  streaming_matrix_test.py  test_utils.py  toeplitz.py  toeplitz_test.py
jax_privacy/experimental/: README.md  __init__.py  _data_loader.py  accounting.py  batch_selection.py  batch_selection_test.py  clipping.py  clipping_test.py  compilation_utils.py  discrete_gaussian.py  execution_plan.py  execution_plan_test.py  gradient_clipping.py  gradient_clipping_test.py  microbatching.py  microbatching_test.py  optimizers.py  training.py  workloads.py
jax_privacy/keras/: __init__.py  keras_api.py  keras_api_test.py
jax_privacy/matrix_factorization/: README.md  __init__.py  _checks.py  banded.py  buffered_toeplitz.py  buffered_toeplitz_test.py  checks.py  dense.py  dense_test.py  optimization.py  sensitivity.py  sensitivity_test.py  streaming_matrix.py  streaming_matrix_test.py  test_utils.py  toeplitz.py  toeplitz_test.py
jax_privacy/noise_addition/: __init__.py  additive_privatizers.py  additive_privatizers_test.py  distributed_noise_generation.py  distributed_noise_generation_test.py  gradient_privatizer.py  sharding_utils.py
jax_privacy/stream_privatization/: additive_privatizers.py  additive_privatizers_test.py  distributed_noise_generation.py  distributed_noise_generation_test.py  gradient_privatizer.py
jax_privacy/training/: algorithm_config.py  algorithm_config_test.py  auto_tune.py  auto_tune_test.py  averaging.py  batching.py  devices.py  dp_updater.py  dp_updater_test.py  evaluator.py  evaluator_test.py  experiment.py  experiment_config.py  forward.py  jaxline.py  metrics.py  metrics_test.py  optimizer_config.py  updater.py
tests/: _multi_owner_test.py  _validate_test.py  accounting_test.py  auditing_test.py  batch_selection_test.py  clipping_test.py  distributed_noise_generation_test.py  execution_plan_test.py  gradient_clipping_test.py  keras_api_e2e_test.py  keras_api_test.py  noise_addition_test.py  optimizers_test.py  sharding_utils_test.py  training_test.py
tests/accounting/: analysis_test.py  calibrate_test.py
tests/experimental/: _data_loader_test.py  accounting_test.py  compilation_utils_test.py  discrete_gaussian_test.py  execution_plan_test.py  microbatching_test.py  optimizers_test.py  training_test.py  workloads_test.py
tests/matrix_factorization/: _checks_test.py  banded_test.py  buffered_toeplitz_test.py  checks_test.py  dense_test.py  optimization_test.py  sensitivity_test.py  streaming_matrix_test.py  (+1 more)
(+123 files in other folders)
